# 470-AI

./: AttractiveField.py  BoxCanyonField.py  CMakeLists.txt  CreativeField.py  Field.py  Maze.py  Node.py  PathFinder.py  Point.py  PolyField.py  Queue.py  RRT.py  RandomField.py  RepulsiveField.py  TangentialField.py  Vector.py  World.py  lab2.py  package.xml  readme  sphero_intrude_gui.py  sphero_swarm_line_gui.py
PartOfSpeech/: HMM.py  LanguageModel.py  ProseWriter.py  Tagger.py  languageModeling.py  ngram.py  parser.py  pos.py  result.csv  test.txt  testing_sample.txt  train.txt  trainingData.txt  training_sample.txt
Reversi/: .gitignore  Board.py  Enums.py  Reversi.py  Square.py  Tests.py  Tree.py
Sphero/: BoxCanyonField.py  CreativeField.py  DirectionCalculator.py  Field.py  Node.py  Point.py  RandomField.py  TangentialField.py  Vector.py  lab2.py  package.xml  sphero_swarm_line_gui.py
include/: april_tags_tracker.h  apriltags_intrude_detector.h  geo_datatype.h  intrude_client.h
launch/: launch_apriltags_intrude_detector.launch  launch_apriltags_intrude_detector_client.launch  launch_apriltags_intrude_gui.launch
msg/: apriltags_intrude.msg
scripts/: Cost.py  PathFinder.py  RRT.py  RepulsiveField.py  Vector.py  World.py  sphero_intrude_gui.py
src/: apriltags_intrude_detector.cpp  apriltags_intrude_detector_demo.cpp  intrude_client.cpp  intrude_client_demo.cpp
srv/: apriltags_info.srv  apriltags_intrude.srv
